# agent

./: .gitignore
personal-agent/: .dockerignore  .env  .env.example  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
personal-agent/config/: logging_config.py  settings.py
personal-agent/data/: memory_default.json  profile_default.json
personal-agent/scripts/: install.sh  personal-agent.service  run.sh
personal-agent/src/: __init__.py
personal-agent/src/agent/: __init__.py  brain.py  content.py  memory.py  profile.py
personal-agent/src/daemon/: __init__.py  service.py
personal-agent/src/llm/: __init__.py  base.py  example_usage.py  factory.py  gemini.py
personal-agent/src/terminal/: __init__.py  cli.py
personal-agent/src/web/: __init__.py  app.py
personal-agent/src/web/static/: index.html
personal-agent/tests/: __init__.py  conftest.py  test_brain.py  test_content.py  test_llm_base.py  test_llm_factory.py  test_memory.py  test_profile.py
